parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     new_scope -> <empty>
Rule 2     close_current_scope -> <empty>
Rule 3     set_func_return_type -> <empty>
Rule 4     new_function_scope -> <empty>
Rule 5     init_param -> <empty>
Rule 6     function_start_quad -> <empty>
Rule 7     endfunc_quad -> <empty>
Rule 8     init_func_call -> <empty>
Rule 9     increment_argument_counter -> <empty>
Rule 10    check_arg_count_type -> <empty>
Rule 11    create_gosub_quad -> <empty>
Rule 12    validate_return -> <empty>
Rule 13    add_operator_to_stack -> <empty>
Rule 14    set_current_type -> <empty>
Rule 15    init_variable -> <empty>
Rule 16    check_variable_exists -> <empty>
Rule 17    init_array -> <empty>
Rule 18    init_array_size -> <empty>
Rule 19    init_array_variable -> <empty>
Rule 20    add_id_type_to_stack -> <empty>
Rule 21    add_float_type_to_stack -> <empty>
Rule 22    add_int_type_to_stack -> <empty>
Rule 23    add_string_type_stack -> <empty>
Rule 24    add_boolean_type_to_stack -> <empty>
Rule 25    process_relational_operator -> <empty>
Rule 26    process_plus_minus_operators -> <empty>
Rule 27    process_mult_div_operators -> <empty>
Rule 28    array_name_reference -> <empty>
Rule 29    array_reference_value -> <empty>
Rule 30    add_separator -> <empty>
Rule 31    remove_separator -> <empty>
Rule 32    create_gotof_quad -> <empty>
Rule 33    goto_skip_else -> <empty>
Rule 34    goto_end_position -> <empty>
Rule 35    goto_return_position -> <empty>
Rule 36    return_end_jump_position -> <empty>
Rule 37    goto_main -> <empty>
Rule 38    main_quad -> <empty>
Rule 39    check_absolute_argument_call -> <empty>
Rule 40    check_absolute_argument_value -> <empty>
Rule 41    print_value -> <empty>
Rule 42    end_program -> <empty>
Rule 43    program -> PROGRAM ID SEMICOLON global_vars goto_main global_declaration main_declaration end_program
Rule 44    global_vars -> global_vars global_vars_actions
Rule 45    global_vars -> empty
Rule 46    global_vars_actions -> declare_var
Rule 47    global_vars_actions -> assign_statement
Rule 48    global_declaration -> global_declaration global_statement
Rule 49    global_declaration -> empty
Rule 50    global_statement -> declare_function
Rule 51    global_statement -> declare_function_void
Rule 52    global_statement -> print
Rule 53    main_declaration -> MAIN main_quad LPARENT RPARENT LBRACE new_scope statement_list RBRACE close_current_scope SEMICOLON
Rule 54    statement_list -> statement_list statement
Rule 55    statement_list -> empty
Rule 56    statement -> declare_var
Rule 57    statement -> assign_statement
Rule 58    statement -> function_call
Rule 59    statement -> if_condition
Rule 60    statement -> while_loop
Rule 61    statement -> absolute_call
Rule 62    statement -> return
Rule 63    statement -> print
Rule 64    declare_function -> FUNCTION ID new_function_scope LESSTHAN function_type GREATERTHAN LPARENT params RPARENT LBRACE function_start_quad statement_list return RBRACE endfunc_quad close_current_scope SEMICOLON
Rule 65    declare_function_void -> FUNCTION ID new_function_scope LESSTHAN VOID_TYPE set_func_return_type GREATERTHAN LPARENT params RPARENT LBRACE function_start_quad statement_list RBRACE endfunc_quad close_current_scope SEMICOLON
Rule 66    function_type -> FLOAT_TYPE set_func_return_type
Rule 67    function_type -> INT_TYPE set_func_return_type
Rule 68    function_type -> STRING_TYPE set_func_return_type
Rule 69    function_type -> BOOL_TYPE set_func_return_type
Rule 70    params -> param
Rule 71    params -> param COMMA params
Rule 72    param -> var_type ID init_param
Rule 73    function_call_value -> ID init_func_call LPARENT arg_list RPARENT create_gosub_quad
Rule 74    function_call -> ID init_func_call LPARENT arg_list RPARENT create_gosub_quad SEMICOLON
Rule 75    return -> RETURN mega_expression validate_return SEMICOLON
Rule 76    arg_list -> arg
Rule 77    arg_list -> arg COMMA increment_argument_counter arg_list
Rule 78    arg -> mega_expression check_arg_count_type
Rule 79    declare_var -> VAR var_type ID init_variable SEMICOLON
Rule 80    declare_var -> VAR var_type ID init_array LBRACKET INT init_array_size RBRACKET init_array_variable SEMICOLON
Rule 81    assign_statement -> VAR var_type ID init_variable add_id_type_to_stack EQUAL add_operator_to_stack mega_expression SEMICOLON
Rule 82    assign_statement -> reference EQUAL add_operator_to_stack mega_expression SEMICOLON
Rule 83    var_type -> FLOAT_TYPE set_current_type
Rule 84    var_type -> INT_TYPE set_current_type
Rule 85    var_type -> STRING_TYPE set_current_type
Rule 86    var_type -> BOOL_TYPE set_current_type
Rule 87    relational_operator -> GREATERTHAN add_operator_to_stack
Rule 88    relational_operator -> LESSTHAN add_operator_to_stack
Rule 89    relational_operator -> EQUALEQUAL add_operator_to_stack
Rule 90    relational_operator -> LESSTHANOREQUAL add_operator_to_stack
Rule 91    relational_operator -> GREATERTHANOREQUAL add_operator_to_stack
Rule 92    relational_operator -> NOTEQUAL add_operator_to_stack
Rule 93    mega_expression -> expression
Rule 94    mega_expression -> expression relational_operator expression process_relational_operator
Rule 95    expression -> term process_plus_minus_operators
Rule 96    expression -> term process_plus_minus_operators PLUS add_operator_to_stack expression
Rule 97    expression -> term process_plus_minus_operators MINUS add_operator_to_stack expression
Rule 98    term -> factor process_mult_div_operators
Rule 99    term -> factor process_mult_div_operators TIMES add_operator_to_stack term
Rule 100   term -> factor process_mult_div_operators DIVIDE add_operator_to_stack term
Rule 101   factor -> LPARENT add_separator mega_expression RPARENT remove_separator
Rule 102   factor -> value
Rule 103   value -> literal
Rule 104   value -> reference
Rule 105   value -> function_call_value
Rule 106   value -> absolute_call_value
Rule 107   literal -> FLOAT add_float_type_to_stack
Rule 108   literal -> INT add_int_type_to_stack
Rule 109   literal -> STRING add_string_type_stack
Rule 110   literal -> TRUE add_boolean_type_to_stack
Rule 111   literal -> FALSE add_boolean_type_to_stack
Rule 112   reference -> ID check_variable_exists add_id_type_to_stack
Rule 113   reference -> array_reference
Rule 114   array_reference -> ID array_name_reference LBRACKET add_separator expression RBRACKET remove_separator array_reference_value
Rule 115   if_condition -> IF LPARENT mega_expression RPARENT LBRACE create_gotof_quad new_scope statement_list RBRACE close_current_scope else_condition goto_end_position
Rule 116   else_condition -> ELSE goto_skip_else LBRACE new_scope statement_list RBRACE close_current_scope
Rule 117   else_condition -> empty
Rule 118   while_loop -> WHILE goto_return_position LPARENT mega_expression RPARENT LBRACE create_gotof_quad new_scope statement_list RBRACE return_end_jump_position close_current_scope
Rule 119   absolute_call -> ABSOLUTE LPARENT mega_expression check_absolute_argument_call RPARENT SEMICOLON
Rule 120   absolute_call_value -> ABSOLUTE LPARENT mega_expression check_absolute_argument_value RPARENT
Rule 121   print -> PRINT LPARENT print_many RPARENT SEMICOLON
Rule 122   print_many -> mega_expression print_value
Rule 123   print_many -> mega_expression print_value COMMA print_many
Rule 124   empty -> <empty>

Terminals, with rules where they appear

ABSOLUTE             : 119 120
BOOL_TYPE            : 69 86
COMMA                : 71 77 123
DIVIDE               : 100
ELSE                 : 116
EQUAL                : 81 82
EQUALEQUAL           : 89
FALSE                : 111
FLOAT                : 107
FLOAT_TYPE           : 66 83
FUNCTION             : 64 65
GREATERTHAN          : 64 65 87
GREATERTHANOREQUAL   : 91
ID                   : 43 64 65 72 73 74 79 80 81 112 114
IF                   : 115
INT                  : 80 108
INT_TYPE             : 67 84
LBRACE               : 53 64 65 115 116 118
LBRACKET             : 80 114
LESSTHAN             : 64 65 88
LESSTHANOREQUAL      : 90
LPARENT              : 53 64 65 73 74 101 115 118 119 120 121
MAIN                 : 53
MINUS                : 97
NOTEQUAL             : 92
PLUS                 : 96
PRINT                : 121
PROGRAM              : 43
RBRACE               : 53 64 65 115 116 118
RBRACKET             : 80 114
RETURN               : 75
RPARENT              : 53 64 65 73 74 101 115 118 119 120 121
SEMICOLON            : 43 53 64 65 74 75 79 80 81 82 119 121
STRING               : 109
STRING_TYPE          : 68 85
TIMES                : 99
TRUE                 : 110
VAR                  : 79 80 81
VOID_TYPE            : 65
WHILE                : 118
error                : 

Nonterminals, with rules where they appear

absolute_call        : 61
absolute_call_value  : 106
add_boolean_type_to_stack : 110 111
add_float_type_to_stack : 107
add_id_type_to_stack : 81 112
add_int_type_to_stack : 108
add_operator_to_stack : 81 82 87 88 89 90 91 92 96 97 99 100
add_separator        : 101 114
add_string_type_stack : 109
arg                  : 76 77
arg_list             : 73 74 77
array_name_reference : 114
array_reference      : 113
array_reference_value : 114
assign_statement     : 47 57
check_absolute_argument_call : 119
check_absolute_argument_value : 120
check_arg_count_type : 78
check_variable_exists : 112
close_current_scope  : 53 64 65 115 116 118
create_gosub_quad    : 73 74
create_gotof_quad    : 115 118
declare_function     : 50
declare_function_void : 51
declare_var          : 46 56
else_condition       : 115
empty                : 45 49 55 117
end_program          : 43
endfunc_quad         : 64 65
expression           : 93 94 94 96 97 114
factor               : 98 99 100
function_call        : 58
function_call_value  : 105
function_start_quad  : 64 65
function_type        : 64
global_declaration   : 43 48
global_statement     : 48
global_vars          : 43 44
global_vars_actions  : 44
goto_end_position    : 115
goto_main            : 43
goto_return_position : 118
goto_skip_else       : 116
if_condition         : 59
increment_argument_counter : 77
init_array           : 80
init_array_size      : 80
init_array_variable  : 80
init_func_call       : 73 74
init_param           : 72
init_variable        : 79 81
literal              : 103
main_declaration     : 43
main_quad            : 53
mega_expression      : 75 78 81 82 101 115 118 119 120 122 123
new_function_scope   : 64 65
new_scope            : 53 115 116 118
param                : 70 71
params               : 64 65 71
print                : 52 63
print_many           : 121 123
print_value          : 122 123
process_mult_div_operators : 98 99 100
process_plus_minus_operators : 95 96 97
process_relational_operator : 94
program              : 0
reference            : 82 104
relational_operator  : 94
remove_separator     : 101 114
return               : 62 64
return_end_jump_position : 118
set_current_type     : 83 84 85 86
set_func_return_type : 65 66 67 68 69
statement            : 54
statement_list       : 53 54 64 65 115 116 118
term                 : 95 96 97 99 100
validate_return      : 75
value                : 102
var_type             : 72 79 80 81
while_loop           : 60

Parsing method: LALR

state 0

    (0) S' -> . program
    (43) program -> . PROGRAM ID SEMICOLON global_vars goto_main global_declaration main_declaration end_program

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (43) program -> PROGRAM . ID SEMICOLON global_vars goto_main global_declaration main_declaration end_program

    ID              shift and go to state 3


state 3

    (43) program -> PROGRAM ID . SEMICOLON global_vars goto_main global_declaration main_declaration end_program

    SEMICOLON       shift and go to state 4


state 4

    (43) program -> PROGRAM ID SEMICOLON . global_vars goto_main global_declaration main_declaration end_program
    (44) global_vars -> . global_vars global_vars_actions
    (45) global_vars -> . empty
    (124) empty -> .

    VAR             reduce using rule 124 (empty -> .)
    ID              reduce using rule 124 (empty -> .)
    MAIN            reduce using rule 124 (empty -> .)
    FUNCTION        reduce using rule 124 (empty -> .)
    PRINT           reduce using rule 124 (empty -> .)

    global_vars                    shift and go to state 5
    empty                          shift and go to state 6

state 5

    (43) program -> PROGRAM ID SEMICOLON global_vars . goto_main global_declaration main_declaration end_program
    (44) global_vars -> global_vars . global_vars_actions
    (37) goto_main -> .
    (46) global_vars_actions -> . declare_var
    (47) global_vars_actions -> . assign_statement
    (79) declare_var -> . VAR var_type ID init_variable SEMICOLON
    (80) declare_var -> . VAR var_type ID init_array LBRACKET INT init_array_size RBRACKET init_array_variable SEMICOLON
    (81) assign_statement -> . VAR var_type ID init_variable add_id_type_to_stack EQUAL add_operator_to_stack mega_expression SEMICOLON
    (82) assign_statement -> . reference EQUAL add_operator_to_stack mega_expression SEMICOLON
    (112) reference -> . ID check_variable_exists add_id_type_to_stack
    (113) reference -> . array_reference
    (114) array_reference -> . ID array_name_reference LBRACKET add_separator expression RBRACKET remove_separator array_reference_value

    MAIN            reduce using rule 37 (goto_main -> .)
    FUNCTION        reduce using rule 37 (goto_main -> .)
    PRINT           reduce using rule 37 (goto_main -> .)
    VAR             shift and go to state 12
    ID              shift and go to state 7

    goto_main                      shift and go to state 8
    global_vars_actions            shift and go to state 9
    declare_var                    shift and go to state 10
    assign_statement               shift and go to state 11
    reference                      shift and go to state 13
    array_reference                shift and go to state 14

state 6

    (45) global_vars -> empty .

    VAR             reduce using rule 45 (global_vars -> empty .)
    ID              reduce using rule 45 (global_vars -> empty .)
    MAIN            reduce using rule 45 (global_vars -> empty .)
    FUNCTION        reduce using rule 45 (global_vars -> empty .)
    PRINT           reduce using rule 45 (global_vars -> empty .)


state 7

    (112) reference -> ID . check_variable_exists add_id_type_to_stack
    (114) array_reference -> ID . array_name_reference LBRACKET add_separator expression RBRACKET remove_separator array_reference_value
    (16) check_variable_exists -> .
    (28) array_name_reference -> .

    EQUAL           reduce using rule 16 (check_variable_exists -> .)
    LBRACKET        reduce using rule 28 (array_name_reference -> .)

    check_variable_exists          shift and go to state 15
    array_name_reference           shift and go to state 16

state 8

    (43) program -> PROGRAM ID SEMICOLON global_vars goto_main . global_declaration main_declaration end_program
    (48) global_declaration -> . global_declaration global_statement
    (49) global_declaration -> . empty
    (124) empty -> .

    MAIN            reduce using rule 124 (empty -> .)
    FUNCTION        reduce using rule 124 (empty -> .)
    PRINT           reduce using rule 124 (empty -> .)

    global_declaration             shift and go to state 17
    empty                          shift and go to state 18

state 9

    (44) global_vars -> global_vars global_vars_actions .

    VAR             reduce using rule 44 (global_vars -> global_vars global_vars_actions .)
    ID              reduce using rule 44 (global_vars -> global_vars global_vars_actions .)
    MAIN            reduce using rule 44 (global_vars -> global_vars global_vars_actions .)
    FUNCTION        reduce using rule 44 (global_vars -> global_vars global_vars_actions .)
    PRINT           reduce using rule 44 (global_vars -> global_vars global_vars_actions .)


state 10

    (46) global_vars_actions -> declare_var .

    VAR             reduce using rule 46 (global_vars_actions -> declare_var .)
    ID              reduce using rule 46 (global_vars_actions -> declare_var .)
    MAIN            reduce using rule 46 (global_vars_actions -> declare_var .)
    FUNCTION        reduce using rule 46 (global_vars_actions -> declare_var .)
    PRINT           reduce using rule 46 (global_vars_actions -> declare_var .)


state 11

    (47) global_vars_actions -> assign_statement .

    VAR             reduce using rule 47 (global_vars_actions -> assign_statement .)
    ID              reduce using rule 47 (global_vars_actions -> assign_statement .)
    MAIN            reduce using rule 47 (global_vars_actions -> assign_statement .)
    FUNCTION        reduce using rule 47 (global_vars_actions -> assign_statement .)
    PRINT           reduce using rule 47 (global_vars_actions -> assign_statement .)


state 12

    (79) declare_var -> VAR . var_type ID init_variable SEMICOLON
    (80) declare_var -> VAR . var_type ID init_array LBRACKET INT init_array_size RBRACKET init_array_variable SEMICOLON
    (81) assign_statement -> VAR . var_type ID init_variable add_id_type_to_stack EQUAL add_operator_to_stack mega_expression SEMICOLON
    (83) var_type -> . FLOAT_TYPE set_current_type
    (84) var_type -> . INT_TYPE set_current_type
    (85) var_type -> . STRING_TYPE set_current_type
    (86) var_type -> . BOOL_TYPE set_current_type

    FLOAT_TYPE      shift and go to state 20
    INT_TYPE        shift and go to state 21
    STRING_TYPE     shift and go to state 22
    BOOL_TYPE       shift and go to state 23

    var_type                       shift and go to state 19

state 13

    (82) assign_statement -> reference . EQUAL add_operator_to_stack mega_expression SEMICOLON

    EQUAL           shift and go to state 24


state 14

    (113) reference -> array_reference .

    EQUAL           reduce using rule 113 (reference -> array_reference .)
    TIMES           reduce using rule 113 (reference -> array_reference .)
    DIVIDE          reduce using rule 113 (reference -> array_reference .)
    PLUS            reduce using rule 113 (reference -> array_reference .)
    MINUS           reduce using rule 113 (reference -> array_reference .)
    GREATERTHAN     reduce using rule 113 (reference -> array_reference .)
    LESSTHAN        reduce using rule 113 (reference -> array_reference .)
    EQUALEQUAL      reduce using rule 113 (reference -> array_reference .)
    LESSTHANOREQUAL reduce using rule 113 (reference -> array_reference .)
    GREATERTHANOREQUAL reduce using rule 113 (reference -> array_reference .)
    NOTEQUAL        reduce using rule 113 (reference -> array_reference .)
    SEMICOLON       reduce using rule 113 (reference -> array_reference .)
    RBRACKET        reduce using rule 113 (reference -> array_reference .)
    COMMA           reduce using rule 113 (reference -> array_reference .)
    RPARENT         reduce using rule 113 (reference -> array_reference .)


state 15

    (112) reference -> ID check_variable_exists . add_id_type_to_stack
    (20) add_id_type_to_stack -> .

    EQUAL           reduce using rule 20 (add_id_type_to_stack -> .)
    TIMES           reduce using rule 20 (add_id_type_to_stack -> .)
    DIVIDE          reduce using rule 20 (add_id_type_to_stack -> .)
    PLUS            reduce using rule 20 (add_id_type_to_stack -> .)
    MINUS           reduce using rule 20 (add_id_type_to_stack -> .)
    GREATERTHAN     reduce using rule 20 (add_id_type_to_stack -> .)
    LESSTHAN        reduce using rule 20 (add_id_type_to_stack -> .)
    EQUALEQUAL      reduce using rule 20 (add_id_type_to_stack -> .)
    LESSTHANOREQUAL reduce using rule 20 (add_id_type_to_stack -> .)
    GREATERTHANOREQUAL reduce using rule 20 (add_id_type_to_stack -> .)
    NOTEQUAL        reduce using rule 20 (add_id_type_to_stack -> .)
    SEMICOLON       reduce using rule 20 (add_id_type_to_stack -> .)
    RBRACKET        reduce using rule 20 (add_id_type_to_stack -> .)
    COMMA           reduce using rule 20 (add_id_type_to_stack -> .)
    RPARENT         reduce using rule 20 (add_id_type_to_stack -> .)

    add_id_type_to_stack           shift and go to state 25

state 16

    (114) array_reference -> ID array_name_reference . LBRACKET add_separator expression RBRACKET remove_separator array_reference_value

    LBRACKET        shift and go to state 26


state 17

    (43) program -> PROGRAM ID SEMICOLON global_vars goto_main global_declaration . main_declaration end_program
    (48) global_declaration -> global_declaration . global_statement
    (53) main_declaration -> . MAIN main_quad LPARENT RPARENT LBRACE new_scope statement_list RBRACE close_current_scope SEMICOLON
    (50) global_statement -> . declare_function
    (51) global_statement -> . declare_function_void
    (52) global_statement -> . print
    (64) declare_function -> . FUNCTION ID new_function_scope LESSTHAN function_type GREATERTHAN LPARENT params RPARENT LBRACE function_start_quad statement_list return RBRACE endfunc_quad close_current_scope SEMICOLON
    (65) declare_function_void -> . FUNCTION ID new_function_scope LESSTHAN VOID_TYPE set_func_return_type GREATERTHAN LPARENT params RPARENT LBRACE function_start_quad statement_list RBRACE endfunc_quad close_current_scope SEMICOLON
    (121) print -> . PRINT LPARENT print_many RPARENT SEMICOLON

    MAIN            shift and go to state 29
    FUNCTION        shift and go to state 33
    PRINT           shift and go to state 34

    main_declaration               shift and go to state 27
    global_statement               shift and go to state 28
    declare_function               shift and go to state 30
    declare_function_void          shift and go to state 31
    print                          shift and go to state 32

state 18

    (49) global_declaration -> empty .

    MAIN            reduce using rule 49 (global_declaration -> empty .)
    FUNCTION        reduce using rule 49 (global_declaration -> empty .)
    PRINT           reduce using rule 49 (global_declaration -> empty .)


state 19

    (79) declare_var -> VAR var_type . ID init_variable SEMICOLON
    (80) declare_var -> VAR var_type . ID init_array LBRACKET INT init_array_size RBRACKET init_array_variable SEMICOLON
    (81) assign_statement -> VAR var_type . ID init_variable add_id_type_to_stack EQUAL add_operator_to_stack mega_expression SEMICOLON

    ID              shift and go to state 35


state 20

    (83) var_type -> FLOAT_TYPE . set_current_type
    (14) set_current_type -> .

    ID              reduce using rule 14 (set_current_type -> .)

    set_current_type               shift and go to state 36

state 21

    (84) var_type -> INT_TYPE . set_current_type
    (14) set_current_type -> .

    ID              reduce using rule 14 (set_current_type -> .)

    set_current_type               shift and go to state 37

state 22

    (85) var_type -> STRING_TYPE . set_current_type
    (14) set_current_type -> .

    ID              reduce using rule 14 (set_current_type -> .)

    set_current_type               shift and go to state 38

state 23

    (86) var_type -> BOOL_TYPE . set_current_type
    (14) set_current_type -> .

    ID              reduce using rule 14 (set_current_type -> .)

    set_current_type               shift and go to state 39

state 24

    (82) assign_statement -> reference EQUAL . add_operator_to_stack mega_expression SEMICOLON
    (13) add_operator_to_stack -> .

    LPARENT         reduce using rule 13 (add_operator_to_stack -> .)
    FLOAT           reduce using rule 13 (add_operator_to_stack -> .)
    INT             reduce using rule 13 (add_operator_to_stack -> .)
    STRING          reduce using rule 13 (add_operator_to_stack -> .)
    TRUE            reduce using rule 13 (add_operator_to_stack -> .)
    FALSE           reduce using rule 13 (add_operator_to_stack -> .)
    ID              reduce using rule 13 (add_operator_to_stack -> .)
    ABSOLUTE        reduce using rule 13 (add_operator_to_stack -> .)

    add_operator_to_stack          shift and go to state 40

state 25

    (112) reference -> ID check_variable_exists add_id_type_to_stack .

    EQUAL           reduce using rule 112 (reference -> ID check_variable_exists add_id_type_to_stack .)
    TIMES           reduce using rule 112 (reference -> ID check_variable_exists add_id_type_to_stack .)
    DIVIDE          reduce using rule 112 (reference -> ID check_variable_exists add_id_type_to_stack .)
    PLUS            reduce using rule 112 (reference -> ID check_variable_exists add_id_type_to_stack .)
    MINUS           reduce using rule 112 (reference -> ID check_variable_exists add_id_type_to_stack .)
    GREATERTHAN     reduce using rule 112 (reference -> ID check_variable_exists add_id_type_to_stack .)
    LESSTHAN        reduce using rule 112 (reference -> ID check_variable_exists add_id_type_to_stack .)
    EQUALEQUAL      reduce using rule 112 (reference -> ID check_variable_exists add_id_type_to_stack .)
    LESSTHANOREQUAL reduce using rule 112 (reference -> ID check_variable_exists add_id_type_to_stack .)
    GREATERTHANOREQUAL reduce using rule 112 (reference -> ID check_variable_exists add_id_type_to_stack .)
    NOTEQUAL        reduce using rule 112 (reference -> ID check_variable_exists add_id_type_to_stack .)
    SEMICOLON       reduce using rule 112 (reference -> ID check_variable_exists add_id_type_to_stack .)
    RBRACKET        reduce using rule 112 (reference -> ID check_variable_exists add_id_type_to_stack .)
    COMMA           reduce using rule 112 (reference -> ID check_variable_exists add_id_type_to_stack .)
    RPARENT         reduce using rule 112 (reference -> ID check_variable_exists add_id_type_to_stack .)


state 26

    (114) array_reference -> ID array_name_reference LBRACKET . add_separator expression RBRACKET remove_separator array_reference_value
    (30) add_separator -> .

    LPARENT         reduce using rule 30 (add_separator -> .)
    FLOAT           reduce using rule 30 (add_separator -> .)
    INT             reduce using rule 30 (add_separator -> .)
    STRING          reduce using rule 30 (add_separator -> .)
    TRUE            reduce using rule 30 (add_separator -> .)
    FALSE           reduce using rule 30 (add_separator -> .)
    ID              reduce using rule 30 (add_separator -> .)
    ABSOLUTE        reduce using rule 30 (add_separator -> .)

    add_separator                  shift and go to state 41

state 27

    (43) program -> PROGRAM ID SEMICOLON global_vars goto_main global_declaration main_declaration . end_program
    (42) end_program -> .

    $end            reduce using rule 42 (end_program -> .)

    end_program                    shift and go to state 42

state 28

    (48) global_declaration -> global_declaration global_statement .

    MAIN            reduce using rule 48 (global_declaration -> global_declaration global_statement .)
    FUNCTION        reduce using rule 48 (global_declaration -> global_declaration global_statement .)
    PRINT           reduce using rule 48 (global_declaration -> global_declaration global_statement .)


state 29

    (53) main_declaration -> MAIN . main_quad LPARENT RPARENT LBRACE new_scope statement_list RBRACE close_current_scope SEMICOLON
    (38) main_quad -> .

    LPARENT         reduce using rule 38 (main_quad -> .)

    main_quad                      shift and go to state 43

state 30

    (50) global_statement -> declare_function .

    MAIN            reduce using rule 50 (global_statement -> declare_function .)
    FUNCTION        reduce using rule 50 (global_statement -> declare_function .)
    PRINT           reduce using rule 50 (global_statement -> declare_function .)


state 31

    (51) global_statement -> declare_function_void .

    MAIN            reduce using rule 51 (global_statement -> declare_function_void .)
    FUNCTION        reduce using rule 51 (global_statement -> declare_function_void .)
    PRINT           reduce using rule 51 (global_statement -> declare_function_void .)


state 32

    (52) global_statement -> print .

    MAIN            reduce using rule 52 (global_statement -> print .)
    FUNCTION        reduce using rule 52 (global_statement -> print .)
    PRINT           reduce using rule 52 (global_statement -> print .)


state 33

    (64) declare_function -> FUNCTION . ID new_function_scope LESSTHAN function_type GREATERTHAN LPARENT params RPARENT LBRACE function_start_quad statement_list return RBRACE endfunc_quad close_current_scope SEMICOLON
    (65) declare_function_void -> FUNCTION . ID new_function_scope LESSTHAN VOID_TYPE set_func_return_type GREATERTHAN LPARENT params RPARENT LBRACE function_start_quad statement_list RBRACE endfunc_quad close_current_scope SEMICOLON

    ID              shift and go to state 44


state 34

    (121) print -> PRINT . LPARENT print_many RPARENT SEMICOLON

    LPARENT         shift and go to state 45


state 35

    (79) declare_var -> VAR var_type ID . init_variable SEMICOLON
    (80) declare_var -> VAR var_type ID . init_array LBRACKET INT init_array_size RBRACKET init_array_variable SEMICOLON
    (81) assign_statement -> VAR var_type ID . init_variable add_id_type_to_stack EQUAL add_operator_to_stack mega_expression SEMICOLON
    (15) init_variable -> .
    (17) init_array -> .

    SEMICOLON       reduce using rule 15 (init_variable -> .)
    EQUAL           reduce using rule 15 (init_variable -> .)
    LBRACKET        reduce using rule 17 (init_array -> .)

    init_variable                  shift and go to state 46
    init_array                     shift and go to state 47

state 36

    (83) var_type -> FLOAT_TYPE set_current_type .

    ID              reduce using rule 83 (var_type -> FLOAT_TYPE set_current_type .)


state 37

    (84) var_type -> INT_TYPE set_current_type .

    ID              reduce using rule 84 (var_type -> INT_TYPE set_current_type .)


state 38

    (85) var_type -> STRING_TYPE set_current_type .

    ID              reduce using rule 85 (var_type -> STRING_TYPE set_current_type .)


state 39

    (86) var_type -> BOOL_TYPE set_current_type .

    ID              reduce using rule 86 (var_type -> BOOL_TYPE set_current_type .)


state 40

    (82) assign_statement -> reference EQUAL add_operator_to_stack . mega_expression SEMICOLON
    (93) mega_expression -> . expression
    (94) mega_expression -> . expression relational_operator expression process_relational_operator
    (95) expression -> . term process_plus_minus_operators
    (96) expression -> . term process_plus_minus_operators PLUS add_operator_to_stack expression
    (97) expression -> . term process_plus_minus_operators MINUS add_operator_to_stack expression
    (98) term -> . factor process_mult_div_operators
    (99) term -> . factor process_mult_div_operators TIMES add_operator_to_stack term
    (100) term -> . factor process_mult_div_operators DIVIDE add_operator_to_stack term
    (101) factor -> . LPARENT add_separator mega_expression RPARENT remove_separator
    (102) factor -> . value
    (103) value -> . literal
    (104) value -> . reference
    (105) value -> . function_call_value
    (106) value -> . absolute_call_value
    (107) literal -> . FLOAT add_float_type_to_stack
    (108) literal -> . INT add_int_type_to_stack
    (109) literal -> . STRING add_string_type_stack
    (110) literal -> . TRUE add_boolean_type_to_stack
    (111) literal -> . FALSE add_boolean_type_to_stack
    (112) reference -> . ID check_variable_exists add_id_type_to_stack
    (113) reference -> . array_reference
    (73) function_call_value -> . ID init_func_call LPARENT arg_list RPARENT create_gosub_quad
    (120) absolute_call_value -> . ABSOLUTE LPARENT mega_expression check_absolute_argument_value RPARENT
    (114) array_reference -> . ID array_name_reference LBRACKET add_separator expression RBRACKET remove_separator array_reference_value

    LPARENT         shift and go to state 53
    FLOAT           shift and go to state 58
    INT             shift and go to state 59
    STRING          shift and go to state 60
    TRUE            shift and go to state 61
    FALSE           shift and go to state 62
    ID              shift and go to state 63
    ABSOLUTE        shift and go to state 64

    reference                      shift and go to state 48
    mega_expression                shift and go to state 49
    expression                     shift and go to state 50
    term                           shift and go to state 51
    factor                         shift and go to state 52
    value                          shift and go to state 54
    literal                        shift and go to state 55
    function_call_value            shift and go to state 56
    absolute_call_value            shift and go to state 57
    array_reference                shift and go to state 14

state 41

    (114) array_reference -> ID array_name_reference LBRACKET add_separator . expression RBRACKET remove_separator array_reference_value
    (95) expression -> . term process_plus_minus_operators
    (96) expression -> . term process_plus_minus_operators PLUS add_operator_to_stack expression
    (97) expression -> . term process_plus_minus_operators MINUS add_operator_to_stack expression
    (98) term -> . factor process_mult_div_operators
    (99) term -> . factor process_mult_div_operators TIMES add_operator_to_stack term
    (100) term -> . factor process_mult_div_operators DIVIDE add_operator_to_stack term
    (101) factor -> . LPARENT add_separator mega_expression RPARENT remove_separator
    (102) factor -> . value
    (103) value -> . literal
    (104) value -> . reference
    (105) value -> . function_call_value
    (106) value -> . absolute_call_value
    (107) literal -> . FLOAT add_float_type_to_stack
    (108) literal -> . INT add_int_type_to_stack
    (109) literal -> . STRING add_string_type_stack
    (110) literal -> . TRUE add_boolean_type_to_stack
    (111) literal -> . FALSE add_boolean_type_to_stack
    (112) reference -> . ID check_variable_exists add_id_type_to_stack
    (113) reference -> . array_reference
    (73) function_call_value -> . ID init_func_call LPARENT arg_list RPARENT create_gosub_quad
    (120) absolute_call_value -> . ABSOLUTE LPARENT mega_expression check_absolute_argument_value RPARENT
    (114) array_reference -> . ID array_name_reference LBRACKET add_separator expression RBRACKET remove_separator array_reference_value

    LPARENT         shift and go to state 53
    FLOAT           shift and go to state 58
    INT             shift and go to state 59
    STRING          shift and go to state 60
    TRUE            shift and go to state 61
    FALSE           shift and go to state 62
    ID              shift and go to state 63
    ABSOLUTE        shift and go to state 64

    expression                     shift and go to state 65
    term                           shift and go to state 51
    factor                         shift and go to state 52
    value                          shift and go to state 54
    literal                        shift and go to state 55
    reference                      shift and go to state 48
    function_call_value            shift and go to state 56
    absolute_call_value            shift and go to state 57
    array_reference                shift and go to state 14

state 42

    (43) program -> PROGRAM ID SEMICOLON global_vars goto_main global_declaration main_declaration end_program .

    $end            reduce using rule 43 (program -> PROGRAM ID SEMICOLON global_vars goto_main global_declaration main_declaration end_program .)


state 43

    (53) main_declaration -> MAIN main_quad . LPARENT RPARENT LBRACE new_scope statement_list RBRACE close_current_scope SEMICOLON

    LPARENT         shift and go to state 66


state 44
